@@ -5,14 +5,15 @@ import ait.cohort55.forum.dto.CommentDto;
 import ait.cohort55.forum.dto.PostAddDto;
 import ait.cohort55.forum.dto.PostDto;
 import ait.cohort55.forum.dto.exeptions.PostNotFoundException;
+import ait.cohort55.forum.model.Comment;
 import ait.cohort55.forum.model.Post;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Service
@@ -21,10 +22,20 @@ public class PostServiceImpl implements PostService {
 
     private final PostRepository postRepository;
 
+
     @Override
     public PostDto addPost(PostAddDto postAddDto) {
         Post post = new Post(null, postAddDto.getTitle(), postAddDto.getContent(), postAddDto.getTags());
         Post saved = postRepository.save(post);
+
+        List<CommentDto> comment1 = saved.getComments().stream()
+                .map(c -> new CommentDto(
+                        c.getUser(),
+                        c.getMessage(),
+                        c.getDateCreated(),
+                        c.getLikes()
+                ))
+                .toList();
 
         return new PostDto(
                 saved.getId(),
@@ -34,70 +45,104 @@ public class PostServiceImpl implements PostService {
                 saved.getDateCreated(),
                 saved.getTags(),
                 saved.getLikes(),
-                saved.getComments()
+                comment1
         );
     }
 
     @Override
     public PostDto findPostById(String id) {
-        Post post = postRepository.findByIdPost(id).orElseThrow(PostNotFoundException::new);
-        return new PostDto(post.getId(), post.getTitle(), post.getContent(), post.getAuthor(), post.getDateCreated(), post.getTags(), post.getLikes(), post.getComments());
+        Post post = postRepository.findById(id).orElseThrow(PostNotFoundException::new);
+        return new PostDto(
+                post.getId(),
+                post.getTitle(),
+                post.getContent(),
+                post.getAuthor(),
+                post.getDateCreated(),
+                post.getTags(),
+                post.getLikes(),
+                post.getComments().stream()
+                        .map(c -> new CommentDto(c.getUser(), c.getMessage(), c.getDateCreated(), c.getLikes()))
+                        .collect(Collectors.toList())
+        );
+    }
+
+
+    @Override
+    public Integer addLike(String postId) {
+        Post post = postRepository.findById(postId).orElseThrow(PostNotFoundException::new);
+        post.addLike();
+        postRepository.save(post);
+        return post.getLikes();
     }
 
     @Override
     public PostDto removePostById(String id) {
-        Post post = postRepository.findByIdPost(id).orElseThrow(PostNotFoundException::new);
-        postRepository.deleteByIdPost(id);
-        return new PostDto(post.getId(), post.getTitle(), post.getContent(), post.getAuthor(), post.getDateCreated(), post.getTags(), post.getLikes(), post.getComments());
-
+        Post post = postRepository.findById(id).orElseThrow(PostNotFoundException::new);
+        postRepository.deleteById(id);
+        return new PostDto(
+                post.getId(),
+                post.getTitle(),
+                post.getContent(),
+                post.getAuthor(),
+                post.getDateCreated(),
+                post.getTags(),
+                post.getLikes(),
+                post.getComments().stream()
+                        .map(c -> new CommentDto(c.getUser(), c.getMessage(), c.getDateCreated(), c.getLikes()))
+                        .collect(Collectors.toList())
+        );
     }
 
     @Override
     public PostDto updatePost(String id, PostAddDto postAddDto) {
-        Post post = postRepository.findByIdPost(id).orElseThrow(PostNotFoundException::new);
-        if(postAddDto.getTitle() != null) {
+        Post post = postRepository.findById(id).orElseThrow(PostNotFoundException::new);
+        if (postAddDto.getTitle() != null) {
             post.setTitle(postAddDto.getTitle());
         }
-        if(postAddDto.getContent() != null) {
+        if (postAddDto.getContent() != null) {
             post.setContent(postAddDto.getContent());
         }
-        if(postAddDto.getTags() != null) {
+        if (postAddDto.getTags() != null) {
             post.setTags(postAddDto.getTags());
         }
         postRepository.save(post);
-        return new PostDto(post.getId(), post.getTitle(), post.getContent(), post.getAuthor(), post.getDateCreated(), post.getTags(), post.getLikes(), post.getComments());
-
-    }
-
-    @Override
-    public Integer addLike(PostDto addLike) {
-        Post post = postRepository.findByIdPost(addLike.getId()).orElseThrow(PostNotFoundException::new);
-        if(post != null) {
-            post.addLike();
-            postRepository.save(post);
-            return post.getLikes();
-        }
-        return 0;
+        return new PostDto(
+                post.getId(),
+                post.getTitle(),
+                post.getContent(),
+                post.getAuthor(),
+                post.getDateCreated(),
+                post.getTags(),
+                post.getLikes(),
+                post.getComments().stream()
+                        .map(c -> new CommentDto(c.getUser(), c.getMessage(), c.getDateCreated(), c.getLikes()))
+                        .collect(Collectors.toList())
+        );
     }
 
     @Override
     public PostDto addComment(String id, CommentDto comment) {
-        Post post = postRepository.findByIdPost(id).orElseThrow(PostNotFoundException::new);
-        if(post != null) {
-            post.addComment(comment.getMessage());
-            Post saved = postRepository.save(post);
-            return new PostDto(
-                    saved.getId(),
-                    saved.getTitle(),
-                    saved.getContent(),
-                    saved.getAuthor(),
-                    saved.getDateCreated(),
-                    saved.getTags(),
-                    saved.getLikes(),
-                    saved.getComments()
-            );
-        }
-        return null;
+        Post post = postRepository.findById(id).orElseThrow(PostNotFoundException::new);
+        Comment comment1 = new Comment(
+                comment.getUser(),
+                comment.getMessage(),
+                LocalDateTime.now(),
+                0
+        );
+        post.addComment(comment1);
+        Post saved = postRepository.save(post);
+        return new PostDto(
+                saved.getId(),
+                saved.getTitle(),
+                saved.getContent(),
+                saved.getAuthor(),
+                saved.getDateCreated(),
+                saved.getTags(),
+                saved.getLikes(),
+                saved.getComments().stream()
+                        .map(c -> new CommentDto(c.getUser(), c.getMessage(), c.getDateCreated(), c.getLikes()))
+                        .collect(Collectors.toList())
+        );
     }
 
     @Override
@@ -112,16 +157,18 @@ public class PostServiceImpl implements PostService {
                         p.getDateCreated(),
                         p.getTags(),
                         p.getLikes(),
-                        p.getComments()
+                        p.getComments().stream()
+                                .map(c -> new CommentDto(c.getUser(), c.getMessage(), c.getDateCreated(), c.getLikes()))
+                                .collect(Collectors.toList())
                 ))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<PostDto> findPostsByTags(List<String> tags) {
         return StreamSupport.stream(postRepository.findAll().spliterator(), false)
-                .filter(t -> tags.contains(t.getTags()))
-                .map(t-> new PostDto(
+                .filter(t -> t.getTags().stream().anyMatch(tags::contains)) // поправил фильтр для тегов
+                .map(t -> new PostDto(
                         t.getId(),
                         t.getTitle(),
                         t.getContent(),
@@ -129,10 +176,13 @@ public class PostServiceImpl implements PostService {
                         t.getDateCreated(),
                         t.getTags(),
                         t.getLikes(),
-                        t.getComments()
+                        t.getComments().stream()
+                                .map(c -> new CommentDto(c.getUser(), c.getMessage(), c.getDateCreated(), c.getLikes()))
+                                .collect(Collectors.toList())
                 ))
-                .toList();
+                .collect(Collectors.toList());
     }
+
 
     @Override
     public List<PostDto> findPostsByPeriod(LocalDate dateFrom, LocalDate dateTo) {
